# conjugation_gui

./: .env  .env.example  .gitignore  BUILD.md  BUILD_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  ENHANCEMENT_SUMMARY.md  LICENSE  PROFESSIONAL_README.md  QUICKSTART.md  README.md  SPECIFICATIONS.md  app_config.json  build_advanced.py  build_config.json  build_exe.py  build_installer.py  compatibility_check.py  conjugation_engine.py  exercise_generator.py  exercise_log.txt  installer.nsi  learning_path.py  logging_doc.txt  main.py  main_professional.py  progress.db  progress_tracker.py  pyproject.toml  requirements.txt  runtime_hooks.py  session_log.txt  speed_practice.py  task_scenarios.py  validate_build.py  windows_config.py
.claude/: settings.local.json
.claude-flow/metrics/: performance.json  task-metrics.json
.github/workflows/: build-windows.yml.disabled  release.yml.disabled  test.yml.disabled
.swarm/: memory.db
SpanishConjugation_Distribution/: .env.example  README.txt  Run.bat  progress.db
daily_dev_startup_reports/: 2025-11-18_startup_report.md
docs/: API_KEY_SETUP.md  API_REFERENCE.md  DEVELOPER_GUIDE.md  INSTALLATION.md  SECURITY_SETUP.md  USER_GUIDE.md  Windows_Executable_Architecture.md
examples/: migration_script.py  security_examples.py
pyinstaller_hooks/: hook-PyQt5.py  hook-dotenv.py  hook-openai.py  hook-requests.py
src/: __init__.py
tests/: Makefile  README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  test_backward_compatibility.py  test_build_validation.py  test_config.json  test_executable.py  test_runner.py
(+26 files in other folders)
