[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conjugation_gui"
version = "0.1.0"
description = "A PyQt-based Spanish Conjugation Practice GUI with GPT-4o integration for interactive language learning."
requires-python = ">=3.8"
authors = [
  { name = "Brand", email = "your.email@example.com" }
]

dependencies = [
  "PyQt5==5.15.7",
  "PyQtWebEngine==5.15.7",
  "pyqt5-qt5==5.15.2",
  "pyqtwebengine-qt5==5.15.2",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "openai (>=1.64.0,<2.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "pillow (==10.0.0)",
  # Security dependencies
  "keyring (>=24.0.0,<25.0.0)",
  "cryptography (>=41.0.0,<42.0.0)",
  "aiohttp (>=3.8.0,<4.0.0)",
  "schedule (>=1.2.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.setuptools]
# Optional: Define entry points for a standalone GUI launcher:
# entry_points = { "gui_scripts": ["conjugation_gui=conjugation_gui.main:main"] }
